pode continuar marcin